# proton-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md
.github/workflows/: check.yml  release.yml
.opencode/plans/: plan.md
src/: api.rs  auth.rs  config.rs  countries.rs  login.rs  main.rs  models.rs  regions.rs  theme.rs  tokens.rs  wireguard.rs
src/app/: connection.rs  filter.rs  mod.rs  navigation.rs  search.rs  split_view.rs  state.rs
src/ui/: mod.rs
